--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,55 @@
-.App {
-  text-align: center;
+.animeBg {
+  background-image: url("animeImage.webp");
+  height: 300px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cardbox {
+  width: 90%;
+  height: 50px;
+  padding: 10px;
+  border: 1.5px solid rgb(20, 19, 19);
+  margin-left: 50px;
+  border-spacing: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.searchicon {
+  float: left;
+  margin-left: 30%;
+}
+.search-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+.animeCount {
+  margin-top: 10px;
+}
+.animeCount b {
+  padding: 5px;
+  border-radius: 5px;
+  background-color: white;
+}
+
+.searchbox {
+  width: 400px;
+  border-radius: 15px;
+  padding-left: 30px;
+}
+
+.mynavbar {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 50px;
+  align-items: center;
+}
+
+.navtitle {
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
 }
 
 .App-header {
@@ -24,15 +63,72 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.cardbox-main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 10px 0;
+  min-height: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-data {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+}
+.search-box {
+  position: relative;
+}
+.icon-box {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  text-align: center;
+  padding: 2px;
+  height: 2rem;
+  width: 2rem;
+}
+
+.anime-data {
+  margin: 25px 10%;
+}
+
+.fav-box {
+  display: flex;
+}
+
+.fav-box svg {
+  height: 15px;
+}
+.fav-box span {
+  font-size: 10px;
+}
+.card-data div p {
+  margin-bottom: 0;
+  font-size: 10px;
+  font-weight: bold;
+}
+.anime-tags {
+  margin: 2px 0;
+}
+.anime-tags div {
+  margin: 0 2.5px;
+}
+
+.arrow-box svg {
+  color: #8882d3;
+}
+.no-results {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+
+.pagination-div {
+  margin-right: 10%;
+  float: right;
 }
